# clipboardwire

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  PROTOCOL.md  README.md  SECURITY.md  docker-compose.yml  release-please-config.json
.github/workflows/: android-apk.yml  bump-homebrew.yml  ci.yml  docker.yml  release-please.yml  release.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/davefx/clipboardwire/: ClipboardSyncServiceTest.kt  MainActivityTest.kt
android/app/src/test/java/com/davefx/clipboardwire/service/: ProtocolTest.kt  WebSocketHandlerTest.kt
cli/: Cargo.toml
cli/src/: main.rs  tray.rs
cli/tests/: tray_uia_windows.rs
cli/wix/: main.wxs
core/: Cargo.toml
core/src/: lib.rs  protocol.rs
core/src/client/: clipboard.rs  config.rs  file.rs  files_clipboard.rs  mod.rs  tls.rs  transport.rs
core/src/server/: config.rs  hub.rs  mod.rs  tls.rs  ws.rs
core/tests/: client_e2e.rs  end_to_end.rs  file_transfer.rs
packaging/: clipboardwire.env.example
server-bin/: Cargo.toml
server-bin/src/: main.rs
