[package]
name = "clipboardwire-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

base64 = "0.22"
subtle = "2"
axum = { version = "0.8", features = ["macros", "ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"

# client-side
toml = "0.9"
directories = "6"
arboard = { version = "3", default-features = false }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
http = "1"
blake3 = "1"
webpki-roots = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio-tungstenite = "0.29"
